update the projects; change my name from Youssef to J.; fix markdown linting;

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Youssef Adly
+title: J. Adly
 markdown: kramdown
 
 # for atom feed
 author:
-  name: Youssef Adly
+  name: J. Adly
   email: youssefadly237@gmail.com
 
 log_level: info
