--- a/_data/author.yml
+++ b/_data/author.yml
@@ -2,16 +2,13 @@ name: Youssef Adly
 dp: https://avatars.githubusercontent.com/u/129727815?v=4
 description: "
   <p>
-    STEM Assiut S'24
+    Medicine Student, MNU '29
   </p>
   <p>
-    Medicine MNU S'29
+    HS Student, Assiut STEM School '24
   </p>
   <p>
-    I value science for the sake of science
-  </p>
-  <p>
-    interested in CS
+    Coding hobbyist and part time dev
   </p>
 "
 email: youssefadly237@gmail.com
