chore: replace PNGs with SVGs; update X branding;

--- a/_data/author.yml
+++ b/_data/author.yml
@@ -17,7 +17,7 @@ contact:
     url: https://www.linkedin.com/in/youssefadly237
   - title: github
     url: https://github.com/youssefadly237
-  - title: twitter
+  - title: x
     url: https://x.com/youssefadly237
   - title: dev
     url: https://dev.to/youssefadly237
