refactor(ME): restructure about me page

--- a/_data/author.yml
+++ b/_data/author.yml
@@ -2,7 +2,7 @@ name: Youssef Adly
 dp: https://www.gravatar.com/avatar/cf4021296247906e62a5cdc1a46dd1ce?s=100
 description: "
   <p>
-    Medicine Student, MNU '29
+    Medical Student, MNU '29
   </p>
   <p>
     HS Student, Assiut STEM School '24
